--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,18 +1,18 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
+  name        : "Soufiane CHAMI"
   uri         : "http://name.com"
-  email       : "name@name.com"
-  bio         : "This is the first name."
+  email       : "soufiane.chami@und.edu"
+  bio         : ""
   avatar      : "bio-photo-2.jpg"
-  twitter     : "name"
-  google_plus : "Name"
+  twitter     : ""
+  google_plus : ""
 
 Name2 Name2:
-  name        : "Name2 Name2"
+  name        : "Kouhyar Tavakolian"
   email       : "name2@name2.com"
-  bio         : "I ordered what?"
+  bio         : "Program Director of Biomedical Engineering @ UND"
   avatar      : "bio-photo.jpg"
-  twitter     : "name2"
-  google_plus : "Name"
+  twitter     : ""
+  google_plus : ""
