--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 locale                   : "en-US"
 title                    : "Soufiane CHAMI"
 title_separator          : "-"
-name                     : &name "Soufiane"
+name                     : &name "Soufiane CHAMI"
 description              : &description "personal chami "
 url                      : https://SoufianeDataFan.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
