--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "CHAMI Soufiane"
   avatar           : "profile.jpeg"
-  bio              : "Machine Learning Engineer - Fulrbight Scholar"
+  bio              : "Software Engineer - Fulrbight Scholar"
   location         : "United States"
   employer         : "Fulbright Association"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
